--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
 requests_unixsocket==0.2.0
-python-dotenv==0.14.0
-PyYAML==5.3.1
-slack-logger==0.3.1
-python-telegram-handler==2.2
+python_telegram_handler==2.2
+slack_logger==0.3.1
